# datadisk

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml
.claude/: settings.json  settings.local.json
docker/: datadisk.toml
etc/: datadisk_example.toml  disk_0100.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  permission.rs  state.rs
src/entity/: casbin_rule.rs  department.rs  file_access.rs  file_info.rs  group.rs  group_user.rs  mod.rs  op_log.rs  user.rs
src/handlers/: archive_preview.rs  audit.rs  auth.rs  config.rs  department.rs  editing.rs  file.rs  group.rs  mod.rs  recent.rs  role.rs  setup.rs  task.rs  user.rs
src/middleware/: auth.rs  mod.rs
src/routes/: health.rs  mod.rs
src/task/: manager.rs  mod.rs
src/ws/: hub.rs  mod.rs
test/: compose.yml
webapp/: .eslintrc.cjs  editor.html  index.html  package-lock.json  package.json  setup.html  tailwind.config.cjs  vite.config.mjs
webapp/src/: App.jsx  auto-imports.d.ts  main.js  main.jsx
webapp/src/api/: index.js
webapp/src/assets/: main.css
webapp/src/components/: DefaultRedirect.jsx  DepartmentManager.css  DepartmentManager.jsx  GroupManager.css  GroupManager.jsx  GroupUserManager.css  GroupUserManager.jsx  RoleManager.css  RoleManager.jsx  TaskManager.css  TaskManager.jsx  UserManager.css  UserManager.jsx
webapp/src/i18n/: index.js
webapp/src/lib/: http.js  i18n.js  utils.js
webapp/src/pages/: editor.js  editor.jsx  setup.js  setup.jsx
webapp/src/router/: index.js
webapp/src/store/: providers.jsx
webapp/src/stores/: contacts.js  fileStore.js  groups.js  login.js  tasks.js
webapp/src/utils/: uitl.js
webapp/src/views/: AuditView.css  AuditView.jsx  ContactsView.css  ContactsView.jsx  FileView.css  FileView.jsx  GroupView.css  GroupView.jsx  (+6 more)
(+46 files in other folders)
