[package]
name = "datadisk"
version = "0.1.0"
edition = "2021"
authors = ["Datadisk Team"]
description = "A network disk management system"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "ws"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "limit"] }

# Database
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Password hashing
bcrypt = "0.15"

# UUID
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Session management
tower-sessions = "0.12"

# WebSocket
tokio-tungstenite = "0.21"

# File operations
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
async-compression = { version = "0.4", features = ["tokio", "gzip", "deflate"] }
zip = "7.0"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
unrar = "0.5"
sevenz-rust = "0.6"

# Concurrent data structures
dashmap = "5"

# JWT (optional, for API tokens)
jsonwebtoken = "9"

# Authorization
casbin = "2"

# Image/compression utilities
miniz_oxide = "0.7"
crc32fast = "1.3"
sha2 = "0.10.9"
hex = "0.4.3"
reqwest = { version = "0.12.28", features = ["default-tls"] }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "datadisk"
path = "src/main.rs"
